sumo/tests/duarouter/errors/network/ok/routes.duarouter
<routes>
   <vehicle id="0" depart="0">
      <route>1 2</route>
   </vehicle>
</routes>
